[gd_scene load_steps=15 format=3 uid="uid://c2jsuyx5jqvgk"]

[ext_resource type="Script" uid="uid://diim4kfjor7be" path="res://scripts/main-menu/main_menu.gd" id="1_aoiek"]
[ext_resource type="Texture2D" uid="uid://bb0t4gmipmtyo" path="res://assets/main-menu/bg.png" id="2_utspj"]
[ext_resource type="FontFile" uid="uid://dyje33a5fcyef" path="res://assets/fonts/Monocraft.otf" id="3_3wx57"]
[ext_resource type="AudioStream" uid="uid://diljrnuecg8t6" path="res://assets/audio/–ë–æ–≥–¥–∞–Ω –¢–∏—Ç–æ–º–∏—Ä-–ü–µ—Ç–ª—è Feat. –¢—É–º–∞–Ω, –ò–≤–∞–Ω.mp3" id="4_3ubsg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hy6po"]
texture = ExtResource("2_utspj")
modulate_color = Color(0.18121095, 0.18121095, 0.18121095, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w2hs4"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fusrs"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hy6po"]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_naxqw"]
bg_color = Color(0.2702219, 0.27022195, 0.27022177, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lhle4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kgvlk"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eel2y"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7m0km"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_right = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f371p"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aoiek")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_hy6po")

[node name="GameName" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -282.0
offset_top = -283.0
offset_right = 282.0
offset_bottom = -217.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.19076231, 0.19076234, 0.19076231, 1)
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("3_3wx57")
theme_override_font_sizes/font_size = 65
theme_override_styles/normal = SubResource("StyleBoxFlat_w2hs4")
text = "–ù–∞–∑–≤–∞–Ω–∏–µ –∏–≥—Ä—ã"

[node name="MainMenuButton" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -12.0
offset_right = 185.84692
offset_bottom = 263.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Start" type="Button" parent="Panel/MainMenuButton"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3wx57")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_fusrs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hy6po")
theme_override_styles/hover = SubResource("StyleBoxFlat_naxqw")
theme_override_styles/focus = SubResource("StyleBoxFlat_hy6po")
text = "menu_play"

[node name="Settings" type="Button" parent="Panel/MainMenuButton"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3wx57")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_fusrs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hy6po")
theme_override_styles/hover = SubResource("StyleBoxFlat_naxqw")
theme_override_styles/focus = SubResource("StyleBoxFlat_hy6po")
text = "settings_title"

[node name="Quit" type="Button" parent="Panel/MainMenuButton"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3wx57")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_fusrs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hy6po")
theme_override_styles/hover = SubResource("StyleBoxFlat_naxqw")
theme_override_styles/focus = SubResource("StyleBoxFlat_hy6po")
text = "menu_quit"

[node name="ChoiceGame" type="Panel" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_lhle4")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ChoiceGame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -361.0
offset_top = -12.0
offset_right = 361.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ContinueGame" type="Button" parent="Panel/ChoiceGame/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 5
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3wx57")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_fusrs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hy6po")
theme_override_styles/hover = SubResource("StyleBoxFlat_naxqw")
theme_override_styles/disabled = SubResource("StyleBoxFlat_fusrs")
theme_override_styles/focus = SubResource("StyleBoxFlat_fusrs")
disabled = true
text = "continue_game"

[node name="NewGame" type="Button" parent="Panel/ChoiceGame/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 5
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3wx57")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_fusrs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hy6po")
theme_override_styles/hover = SubResource("StyleBoxFlat_naxqw")
theme_override_styles/focus = SubResource("StyleBoxFlat_hy6po")
text = "new_game"

[node name="BackMenu" type="Button" parent="Panel/ChoiceGame"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -93.5
offset_top = -217.0
offset_right = 93.5
offset_bottom = -132.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 6
size_flags_vertical = 7
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3wx57")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_fusrs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hy6po")
theme_override_styles/hover = SubResource("StyleBoxFlat_naxqw")
theme_override_styles/focus = SubResource("StyleBoxFlat_hy6po")
text = "menu_back"

[node name="EditorPlayer" type="Panel" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -355.5
offset_top = -170.0
offset_right = 355.5
offset_bottom = 290.0
grow_horizontal = 2
grow_vertical = 2

[node name="Choice" type="Panel" parent="Panel/EditorPlayer"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -450.5
offset_top = -230.0
offset_right = -0.5
offset_bottom = 229.61108
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kgvlk")

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/EditorPlayer/Choice"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -112.5
offset_top = 20.777771
offset_right = 112.5
offset_bottom = 51.77777
grow_horizontal = 2

[node name="Label" type="Label" parent="Panel/EditorPlayer/Choice/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3wx57")
text = "editor_name_player"

[node name="LineEdit" type="LineEdit" parent="Panel/EditorPlayer/Choice/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/EditorPlayer/Choice"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 65.0
offset_top = -59.611084
offset_right = -65.0
offset_bottom = -17.611084
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 16

[node name="BackToLoad" type="Button" parent="Panel/EditorPlayer/Choice/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3wx57")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_eel2y")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hy6po")
theme_override_styles/hover = SubResource("StyleBoxFlat_naxqw")
text = "menu_back"

[node name="StartNewGame" type="Button" parent="Panel/EditorPlayer/Choice/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3wx57")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_eel2y")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hy6po")
theme_override_styles/hover = SubResource("StyleBoxFlat_naxqw")
text = "start_game"

[node name="PlayerPreview" type="Panel" parent="Panel/EditorPlayer"]
layout_mode = 1
offset_right = 261.5
offset_bottom = 460.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7m0km")

[node name="PlayerRandom" type="Button" parent="Panel/EditorPlayer/PlayerPreview"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -66.0
offset_top = -60.0
offset_right = 86.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3wx57")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_eel2y")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hy6po")
theme_override_styles/hover = SubResource("StyleBoxFlat_naxqw")
text = "player_random"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3ubsg")
autoplay = true
bus = &"Music"

[node name="PrivacyPolicy" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PrivacyPolicy" type="Panel" parent="PrivacyPolicy"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f371p")

[node name="ScrollContainer" type="ScrollContainer" parent="PrivacyPolicy/PrivacyPolicy"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -528.0
offset_top = -253.5
offset_right = 528.0
offset_bottom = 159.5
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PrivacyPolicy/PrivacyPolicy/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "–ü–æ–ª–∏—Ç–∏–∫–∞ –∫–æ–Ω—Ñ–∏–¥–µ–Ω—Ü–∏–∞–ª—å–Ω–æ—Å—Ç–∏

–¥–ª—è –∏–≥—Ä—ã ‚ÄúBeatmaker Tycoon‚Äù

–î–∞—Ç–∞ –≤—Å—Ç—É–ø–ª–µ–Ω–∏—è –≤ —Å–∏–ª—É: [—É–∫–∞–∂–∏ –¥–∞—Ç—É –ø—É–±–ª–∏–∫–∞—Ü–∏–∏]

1. –û–±—â–∏–µ –ø–æ–ª–æ–∂–µ–Ω–∏—è

–ù–∞—Å—Ç–æ—è—â–∞—è –ü–æ–ª–∏—Ç–∏–∫–∞ –∫–æ–Ω—Ñ–∏–¥–µ–Ω—Ü–∏–∞–ª—å–Ω–æ—Å—Ç–∏ –æ–ø–∏—Å—ã–≤–∞–µ—Ç, –∫–∞–∫ –∏–≥—Ä–∞ ‚ÄúBeatmaker Tycoon‚Äù (–¥–∞–ª–µ–µ ‚Äî –ò–≥—Ä–∞) –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –∏ –∑–∞—â–∏—â–∞–µ—Ç –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π.
–ú—ã —É–≤–∞–∂–∞–µ–º –≤–∞—à—É –ø—Ä–∏–≤–∞—Ç–Ω–æ—Å—Ç—å –∏ —Å—Ç—Ä–µ–º–∏–º—Å—è –æ–±–µ—Å–ø–µ—á–∏—Ç—å –±–µ–∑–æ–ø–∞—Å–Ω–æ–µ –∏—Å–ø–æ–ª—å–∑–æ–≤–∞–Ω–∏–µ –ò–≥—Ä—ã.

2. –°–±–æ—Ä –¥–∞–Ω–Ω—ã—Ö

–ò–≥—Ä–∞ –Ω–µ —Ç—Ä–µ–±—É–µ—Ç —Å–æ–∑–¥–∞–Ω–∏—è —É—á—ë—Ç–Ω–æ–π –∑–∞–ø–∏—Å–∏ –∏ –Ω–µ —Å–æ–±–∏—Ä–∞–µ—Ç –ø–µ—Ä—Å–æ–Ω–∞–ª—å–Ω—ã–µ –¥–∞–Ω–Ω—ã–µ, —Ç–∞–∫–∏–µ –∫–∞–∫:

–∏–º—è, –∞–¥—Ä–µ—Å, e-mail, —Ç–µ–ª–µ—Ñ–æ–Ω;

–¥–∞–Ω–Ω—ã–µ –ø–ª–∞—Ç—ë–∂–Ω—ã—Ö –∫–∞—Ä—Ç;

—Ñ–∞–π–ª—ã, —Ñ–æ—Ç–æ–≥—Ä–∞—Ñ–∏–∏ –∏–ª–∏ –∏–Ω—ã–µ –ª–∏—á–Ω—ã–µ —Å–≤–µ–¥–µ–Ω–∏—è.

3. –ê–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏–π —Å–±–æ—Ä —Ç–µ—Ö–Ω–∏—á–µ—Å–∫–∏—Ö –¥–∞–Ω–Ω—ã—Ö

–í –Ω–µ–∫–æ—Ç–æ—Ä—ã—Ö —Å–ª—É—á–∞—è—Ö –ò–≥—Ä–∞ –∏–ª–∏ –ø–ª–∞—Ç—Ñ–æ—Ä–º–∞ —Ä–∞—Å–ø—Ä–æ—Å—Ç—Ä–∞–Ω–µ–Ω–∏—è (–Ω–∞–ø—Ä–∏–º–µ—Ä, Steam, itch.io –∏–ª–∏ Google Play) –º–æ–∂–µ—Ç –∞–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏ –ø–æ–ª—É—á–∞—Ç—å –æ–±–µ–∑–ª–∏—á–µ–Ω–Ω—ã–µ –¥–∞–Ω–Ω—ã–µ, —Ç–∞–∫–∏–µ –∫–∞–∫:

–≤–µ—Ä—Å–∏—è –æ–ø–µ—Ä–∞—Ü–∏–æ–Ω–Ω–æ–π —Å–∏—Å—Ç–µ–º—ã;

—è–∑—ã–∫ –∏–Ω—Ç–µ—Ä—Ñ–µ–π—Å–∞;

—Ä–∞–∑—Ä–µ—à–µ–Ω–∏–µ —ç–∫—Ä–∞–Ω–∞;

—Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞ —Å–µ—Å—Å–∏–π (–≤—Ä–µ–º—è –∏–≥—Ä—ã, –¥–æ—Å—Ç–∏–∂–µ–Ω–∏—è –∏ —Ç.–¥.).

–≠—Ç–∏ –¥–∞–Ω–Ω—ã–µ –∏—Å–ø–æ–ª—å–∑—É—é—Ç—Å—è –∏—Å–∫–ª—é—á–∏—Ç–µ–ª—å–Ω–æ –¥–ª—è —É–ª—É—á—à–µ–Ω–∏—è –ø—Ä–æ–∏–∑–≤–æ–¥–∏—Ç–µ–ª—å–Ω–æ—Å—Ç–∏ –∏ –∫–∞—á–µ—Å—Ç–≤–∞ –ò–≥—Ä—ã –∏ –Ω–µ –ø–æ–∑–≤–æ–ª—è—é—Ç –∏–¥–µ–Ω—Ç–∏—Ñ–∏—Ü–∏—Ä–æ–≤–∞—Ç—å –∫–æ–Ω–∫—Ä–µ—Ç–Ω–æ–≥–æ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è.

4. –°—Ç–æ—Ä–æ–Ω–Ω–∏–µ —Å–µ—Ä–≤–∏—Å—ã

–ò–≥—Ä–∞ –º–æ–∂–µ—Ç –∏—Å–ø–æ–ª—å–∑–æ–≤–∞—Ç—å —Å—Ç–æ—Ä–æ–Ω–Ω–∏–µ –±–∏–±–ª–∏–æ—Ç–µ–∫–∏ –∏–ª–∏ —Å–µ—Ä–≤–∏—Å—ã (–Ω–∞–ø—Ä–∏–º–µ—Ä, –∞—É–¥–∏–æ—Å–∏—Å—Ç–µ–º—É, –∞–Ω–∞–ª–∏—Ç–∏—á–µ—Å–∫–∏–µ SDK –∏–ª–∏ –æ–±–ª–∞—á–Ω—ã–µ —Ö—Ä–∞–Ω–∏–ª–∏—â–∞).
–ö–∞–∂–¥—ã–π —Ç–∞–∫–æ–π —Å–µ—Ä–≤–∏—Å –ø–æ–¥—á–∏–Ω—è–µ—Ç—Å—è —Å–≤–æ–µ–π –ø–æ–ª–∏—Ç–∏–∫–µ –∫–æ–Ω—Ñ–∏–¥–µ–Ω—Ü–∏–∞–ª—å–Ω–æ—Å—Ç–∏.
–ú—ã –Ω–µ –ø–µ—Ä–µ–¥–∞—ë–º —Å—Ç–æ—Ä–æ–Ω–Ω–∏–º –ª–∏—Ü–∞–º –Ω–∏–∫–∞–∫–∏—Ö –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—å—Å–∫–∏—Ö –¥–∞–Ω–Ω—ã—Ö –Ω–∞–ø—Ä—è–º—É—é.

5. –•—Ä–∞–Ω–µ–Ω–∏–µ –¥–∞–Ω–Ω—ã—Ö

–ò–≥—Ä–∞ –º–æ–∂–µ—Ç —Å–æ—Ö—Ä–∞–Ω—è—Ç—å –ª–æ–∫–∞–ª—å–Ω—ã–µ –∏–≥—Ä–æ–≤—ã–µ –¥–∞–Ω–Ω—ã–µ (–ø—Ä–æ–≥—Ä–µ—Å—Å, –Ω–∞—Å—Ç—Ä–æ–π–∫–∏, —è–∑—ã–∫, –≥—Ä–æ–º–∫–æ—Å—Ç—å –∏ —Ç.–¥.) –Ω–∞ —É—Å—Ç—Ä–æ–π—Å—Ç–≤–µ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è.
–≠—Ç–∏ –¥–∞–Ω–Ω—ã–µ –Ω–µ –ø–µ—Ä–µ–¥–∞—é—Ç—Å—è —Ä–∞–∑—Ä–∞–±–æ—Ç—á–∏–∫—É –∏ –º–æ–≥—É—Ç –±—ã—Ç—å —É–¥–∞–ª–µ–Ω—ã –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–º –≤ –ª—é–±–æ–µ –≤—Ä–µ–º—è (–Ω–∞–ø—Ä–∏–º–µ—Ä, –ø—Ä–∏ —É–¥–∞–ª–µ–Ω–∏–∏ –ò–≥—Ä—ã).

6. –ë–µ–∑–æ–ø–∞—Å–Ω–æ—Å—Ç—å

–ú—ã –ø—Ä–∏–Ω–∏–º–∞–µ–º —Ä–∞–∑—É–º–Ω—ã–µ —Ç–µ—Ö–Ω–∏—á–µ—Å–∫–∏–µ –º–µ—Ä—ã –¥–ª—è –∑–∞—â–∏—Ç—ã –¥–∞–Ω–Ω—ã—Ö –æ—Ç –Ω–µ—Å–∞–Ω–∫—Ü–∏–æ–Ω–∏—Ä–æ–≤–∞–Ω–Ω–æ–≥–æ –¥–æ—Å—Ç—É–ø–∞, –∏–∑–º–µ–Ω–µ–Ω–∏—è –∏–ª–∏ —É–¥–∞–ª–µ–Ω–∏—è.
–û–¥–Ω–∞–∫–æ —Å–ª–µ–¥—É–µ—Ç —É—á–∏—Ç—ã–≤–∞—Ç—å, —á—Ç–æ –ø–æ–ª–Ω–∞—è –±–µ–∑–æ–ø–∞—Å–Ω–æ—Å—Ç—å –¥–∞–Ω–Ω—ã—Ö –ø—Ä–∏ –ø–µ—Ä–µ–¥–∞—á–µ —á–µ—Ä–µ–∑ –ò–Ω—Ç–µ—Ä–Ω–µ—Ç –Ω–µ –º–æ–∂–µ—Ç –±—ã—Ç—å –≥–∞—Ä–∞–Ω—Ç–∏—Ä–æ–≤–∞–Ω–∞.

7. –ò–∑–º–µ–Ω–µ–Ω–∏—è –≤ –ø–æ–ª–∏—Ç–∏–∫–µ

–ú—ã –º–æ–∂–µ–º –≤—Ä–µ–º—è –æ—Ç –≤—Ä–µ–º–µ–Ω–∏ –æ–±–Ω–æ–≤–ª—è—Ç—å –Ω–∞—Å—Ç–æ—è—â—É—é –ü–æ–ª–∏—Ç–∏–∫—É.
–ù–æ–≤–∞—è –≤–µ—Ä—Å–∏—è –±—É–¥–µ—Ç –æ–ø—É–±–ª–∏–∫–æ–≤–∞–Ω–∞ –≤ —Ç–æ–º –∂–µ –º–µ—Å—Ç–µ, —á—Ç–æ –∏ –ø—Ä–µ–¥—ã–¥—É—â–∞—è.
–î–∞—Ç–∞ –ø–æ—Å–ª–µ–¥–Ω–µ–≥–æ –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è –±—É–¥–µ—Ç —É–∫–∞–∑–∞–Ω–∞ –≤–≤–µ—Ä—Ö—É –¥–æ–∫—É–º–µ–Ω—Ç–∞.

8. –ö–æ–Ω—Ç–∞–∫—Ç—ã

–ü–æ –≤—Å–µ–º –≤–æ–ø—Ä–æ—Å–∞–º, —Å–≤—è–∑–∞–Ω–Ω—ã–º —Å –ü–æ–ª–∏—Ç–∏–∫–æ–π –∫–æ–Ω—Ñ–∏–¥–µ–Ω—Ü–∏–∞–ª—å–Ω–æ—Å—Ç–∏, –≤—ã –º–æ–∂–µ—Ç–µ —Å–≤—è–∑–∞—Ç—å—Å—è —Å —Ä–∞–∑—Ä–∞–±–æ—Ç—á–∏–∫–æ–º:

üìß [—É–∫–∞–∂–∏ —Å–≤–æ–π e-mail –∏–ª–∏ —Å—Å—ã–ª–∫—É –Ω–∞ —Ñ–æ—Ä–º—É –æ–±—Ä–∞—Ç–Ω–æ–π —Å–≤—è–∑–∏]
"

[node name="AcceptPrivacy" type="Button" parent="PrivacyPolicy/PrivacyPolicy"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -68.0
offset_right = 90.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3wx57")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_fusrs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hy6po")
theme_override_styles/hover = SubResource("StyleBoxFlat_naxqw")
theme_override_styles/focus = SubResource("StyleBoxFlat_hy6po")
text = "–ü—Ä–∏–Ω—è—Ç—å"

[connection signal="pressed" from="Panel/MainMenuButton/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Panel/MainMenuButton/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Panel/MainMenuButton/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Panel/ChoiceGame/HBoxContainer/ContinueGame" to="." method="_on_continue_game_pressed"]
[connection signal="pressed" from="Panel/ChoiceGame/HBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Panel/ChoiceGame/BackMenu" to="." method="_on_back_menu_pressed"]
[connection signal="pressed" from="Panel/EditorPlayer/Choice/HBoxContainer/BackToLoad" to="." method="_on_back_to_load_pressed"]
[connection signal="pressed" from="Panel/EditorPlayer/Choice/HBoxContainer/StartNewGame" to="." method="_on_start_new_game_pressed"]
[connection signal="pressed" from="PrivacyPolicy/PrivacyPolicy/AcceptPrivacy" to="." method="_on_accept_privacy_pressed"]
